some test templates